# ai-rust

./: Cargo.toml  README.md
src/: ai.rs  main.rs
src/ai/: baidu.rs  command.rs  const_num.rs  dispatch.rs  xunfei.rs
src/ai/baidu/: baidu_ai.rs
src/ai/xunfei/: xunfei_ai.rs
