[package]
name = "ai-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.22"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
structopt = { version = "0.3", default-features = false }
tokio = { version = "1.34.0", features = ["full"] }
